customer-manage base curd

--- a/customer-manage/src/main/resources/microservice.yaml
+++ b/customer-manage/src/main/resources/microservice.yaml
@@ -20,8 +20,8 @@
 APPLICATION_ID: houserush
 service_description:
 # name of the declaring microservice
-  name: calculator
-  version: 0.0.1
+  name: customer-manage
+  version: 0.0.2
 servicecomb:
   service:
     registry:
