--- a/customer-manage/pom.xml
+++ b/customer-manage/pom.xml
@@ -29,6 +29,12 @@
   <name>Java Chassis::Samples::Practice::HouseRush-Customer-Manage</name>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
