--- a/pom.xml
+++ b/pom.xml
@@ -74,11 +74,7 @@
         <version>5.1.47</version>
       </dependency>
 
-      <dependency>
-        <groupId>org.projectlombok</groupId>
-        <artifactId>lombok</artifactId>
-        <version>1.16.10</version>
-      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
@@ -86,12 +82,18 @@
     <dependency>
       <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
+      <version>RELEASE</version>
 
     </dependency>
     <dependency>
       <groupId>javax.validation</groupId>
       <artifactId>validation-api</artifactId>
-
+      <version>RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.10</version>
     </dependency>
   </dependencies>
   <build>
