--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,9 @@
     </dependencies>
   </dependencyManagement>
 
+
+
+
   <dependencies>
     <dependency>
       <groupId>org.hibernate.validator</groupId>
@@ -94,7 +97,20 @@
 
     </dependency>
   </dependencies>
+
+
   <build>
+    <pluginManagement>
+
+        <plugins>
+          <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>2.0.1.RELEASE</version>
+          </plugin>
+        </plugins>
+    </pluginManagement>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
