--- a/customer-manage/src/main/resources/microservice.yaml
+++ b/customer-manage/src/main/resources/microservice.yaml
@@ -21,14 +21,24 @@ APPLICATION_ID: houserush
 service_description:
 # name of the declaring microservice
   name: customer-manage
-  version: 0.0.2
+  version: 0.0.7
 servicecomb:
   service:
     registry:
-      address: http://192.168.88.140:30100
+      address: http://127.0.0.1:30100
   rest:
-    address: 0.0.0.0:7777
+    address: 0.0.0.0:7779
   handler:
     chain:
       Provider:
         default: bizkeeper-provider
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/customer?characterEncoding=utf8&useSSL=false
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: root
+  jpa:
+    properties:
+      hibernate:
+        enable_lazy_load_no_trans: true
