--- a/login/src/main/resources/microservice.yaml
+++ b/login/src/main/resources/microservice.yaml
@@ -20,15 +20,24 @@
 APPLICATION_ID: houserush
 service_description:
 # name of the declaring microservice
-  name: calculator
-  version: 0.0.1
+  name: login
+  version: 0.0.3
 servicecomb:
   service:
     registry:
-      address: http://:30100
+      address: http://127.0.0.1:30100
   rest:
-    address: 0.0.0.0:7777
+    address: 0.0.0.0:6777
   handler:
     chain:
       Provider:
         default: bizkeeper-provider
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/login?characterEncoding=utf8&useSSL=false
+    username: root
+    password: root
+  jpa:
+    properties:
+      hibernate:
+        enable_lazy_load_no_trans: true
