--- a/pom.xml
+++ b/pom.xml
@@ -85,13 +85,13 @@
     <dependency>
       <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
-      <version>RELEASE</version>
+      <version>6.1.0.Alpha5</version>
 
     </dependency>
     <dependency>
       <groupId>javax.validation</groupId>
       <artifactId>validation-api</artifactId>
-      <version>RELEASE</version>
+      <version>2.0.1.Final</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
