--- a/user-center/src/main/resources/microservice.yaml
+++ b/user-center/src/main/resources/microservice.yaml
@@ -20,14 +20,14 @@
 APPLICATION_ID: houserush
 service_description:
 # name of the declaring microservice
-  name: calculator
-  version: 0.0.1
+  name: user-center
+  version: 0.0.2
 servicecomb:
   service:
     registry:
       address: http://127.0.0.1:30100
   rest:
-    address: 0.0.0.0:7777
+    address: 0.0.0.0:6877
   handler:
     chain:
       Provider:
