--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
         <version>5.1.47</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-rest</artifactId>
+        <version>${spring-boot-1.version}</version>
+      </dependency>
+
 
     </dependencies>
   </dependencyManagement>
